# axum-api-template

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: publish_ghcr.yml  rust_release.yml
database/: api.db  api.db-shm  api.db-wal
migrations/: 20230704060600_user.sql
src/: ctx.rs  error.rs  lib.rs  log.rs  main.rs
src/args/: parser.rs
src/controler/: user.rs
src/middlewares/: guard.rs  mapper.rs  mod.rs  resolver.rs
src/model/: user.rs
src/router/: mod.rs  user.rs
src/utils/: db.rs  jwt.rs  mod.rs
tests/: quick_dev.rs  route_checking.rs
