[package]
name = "axum-api-template"
version = "0.1.0"
edition = "2021"
authors = ["Mourad Lablack <mouradost@gmail.com>"]
description = "Axum API Template"
homepage = "https://github.com/Mouradost/axum-api-template"
repository = "https://github.com/Mouradost/axum-api-template" 
license = "MIT"
keywords = ["server", "template", "api", "crud"]
categories = ["server", "template"]
include = ["src/", "license"]

[dependencies]
# Async runtime
tokio = { version = "1.29", features = ["full"] }
# Server
axum = {version = "0.6", features = ["macros"]}
tower-http = {version = "0.4", features = ["fs", "trace", "cors"]}
tower-cookies = "0.9"
# Json / Serde
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "3"
#JWT
jsonwebtoken = "8"
# Encription
bcrypt = "0.14"
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "uuid"] }
# Others
uuid = {version = "1.3", features = ["v4", "fast-rng"]}
dotenvy = "0.15"
dotenvy_macro = "0.15"
# Not availible yet in Rust
async-trait = "0.1"
# Enum utils
strum_macros = "0.25"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2" # For file output
# Time
chrono = {version = "0.4", features = ["serde"]}
# Error
thiserror = "1"
reqwest = { version = "0.11", features = ["cookies", "json"] }
# CLI parser
clap = {version = "4", features = ["derive"]}


[dev-dependencies]
anyhow = "1"
reqwest = {version = "0.11", features = ["cookies", "json" ]}
colored = "2"

[profile.dev.package.sqlx-macros]
opt-level = 3
